--- a/tutorials/trial/parameters.ini
+++ b/tutorials/trial/parameters.ini
@@ -1,14 +1,14 @@
 [session]
 name=ricorde20230712
 #aoi_fp=C:\RICorDE-dev\tutorials\bryant2022_fred12\data\aoiT02_20220708.geojson
-dem_fp=C:\Users\rescobar\Downloads\RICorDE run+diference\clipped\filldepressionWangAndLiu.tif
+dem_fp=C:\Users\koysa\Downloads\trash\bilinear.tif
 
 #pwb_fp=C:\Users\rescobar\Downloads\RICorDE run+diference\clipped\waterbodies_cutstream_clip.tif
-pwb_fp=C:\Users\rescobar\Downloads\q3 project\waterbodies_ai_cut.geojson
+pwb_fp=C:\Users\koysa\Downloads\trash\water1.geojson
 
 #C:\Users\rescobar\Downloads\RICorDE run+diference\clipped\streamline.tif
-inun_fp=C:\Users\rescobar\Downloads\RICorDE run+diference\clipped\floodextent_clip.geojson
-crsid=EPSG:32612
+inun_fp=C:\Users\koysa\Downloads\trash\flood.geojson
+crsid=EPSG:3779
 
 [dem]
 #resolution =10             #optional resolution for resampling the DEM
