--- a/tutorials/trial/parameters_out11.ini
+++ b/tutorials/trial/parameters_out11.ini
@@ -1,10 +1,10 @@
 [session]
-name=bryant2022_fred12       #project name
-#aoi_fp =   C:\LS\09_REPOS\03_TOOLS\RICorDE\tutorial\bryant2022_fred12\data\aoiT02_20220708.geojson         #optional area of interest polygon filepath
-dem_fp=C:\Users\koysa\OneDrive\Documents\GitHub\RICorDE-hydro1\tutorials\bryant2022_fred12\data\HRDEM_0513_r5_aoi12_0114_filnd_aoiT02.tif             #dem rlay filepath
-pwb_fp=C:\Users\koysa\OneDrive\Documents\GitHub\RICorDE-hydro1\tutorials\bryant2022_fred12\data\NHN_HD_WATERBODY_Fred12_0114_clean_aoiT02.geojson             #permanent water body filepath (raster or polygon)
-inun_fp=C:\Users\koysa\OneDrive\Documents\GitHub\RICorDE-hydro1\tutorials\bryant2022_fred12\data\FiC_Fred12_20180502-20180504_011420_1_aoiT02.geojson            #inundation filepath (raster or polygon)
-crsid=EPSG:3979     #CRSID
+name=10default_handDrawnPoly
+#aoi_fp=C:\RICorDE-dev\tutorials\
+dem_fp=C:\Users\koysa\Downloads\trash\10default_handDrawnPoly\10default_handDrawnPoly\1DEM10m_Source-AEP50cm.tif
+pwb_fp=C:\Users\koysa\Downloads\trash\10default_handDrawnPoly\10default_handDrawnPoly\2waterbodies_heatherai_10m.tif
+inun_fp=C:\Users\koysa\Downloads\trash\10default_handDrawnPoly\10default_handDrawnPoly\3floodextent_handdrawn_3779_20230817clip.geojson
+crsid=EPSG:3779
 
 [dem]
 #resolution =10             #optional resolution for resampling the DEM
@@ -15,6 +15,9 @@ crsid=EPSG:3979     #CRSID
 [inun_rlay]
 #resampling='Maximum'    #gdalwarp resampling method (for polygon inputs)
 
+[dem_hyd]   #Hydraulically corrected DEM
+#dist=                   #Maximum search distance for breach paths in cells
+
 [HAND]      #Height Above Nearest Drainage (HAND) layer                  
 
 [HAND_mask] #no-data boundary of the HAND rlay
@@ -24,8 +27,8 @@ crsid=EPSG:3979     #CRSID
 [beach1]    #HAND beach (shoreline) values raster
 
 [b1Bounds]  #filter values for the HAND beach values              
-qhigh=0.9               #Quartile to use for upper bound
-cap=7.0                 #Maximum value to allow for upper bound
+qhigh=0.5               #Quartile to use for upper bound
+cap=8                 #Maximum value to allow for upper bound
 qlow=0.1                #Quartile to use for lower bound
 floor=0.5               #Minimum value to allow for lower bound
 [inunHmax] #Maximum inundation raster
@@ -43,11 +46,12 @@ pts_cnt=5               #number of points to include in search for whitebox.IdwI
 
 [hgSmooth] #Smoothed rolling HAND grid (low-pass filtering)
 #resolution=            #Resolution for rNeigbour averaging. not output.Defaults to input raster resolution *3
-max_grade = 0.1         #maximum hand value grade to allow 
-neighborhood_size = 7   #neighbourhood size for grass7:r.neighbors
+max_grade = 0.1         #maximum hand value grade to allow (hg:smooth)
+neighborhood_size = 1   #neighbourhood size for grass7:r.neighbors
 #range_thresh=          #maximum range (between HAND cell values) to allow. should no exceed 2.0. Defaults to min(max_grade*resolution, 2.0),2)
-max_iter=5              #maximum number of smoothing iterations to allow
-precision=0.2           #precision of resulting HAND values (value to round to nearest multiple of)
+max_iter=2              #maximum number of smoothing iterations to allow
+precision=0.1           #precision of resulting HAND values (value to round to nearest multiple of)
+
 [hInunSet] #Set of HAND inundation rasters
 animate=False           #Flag to create animations of outputs.
 [hWslSet] #Set of WSL rasters
@@ -55,4 +59,4 @@ max_fail_cnt=5          #Maximum number of wsl failures to allow
 [wslMosaic] #WSL raster mosaiked from underlying HAND values             
 
 [depths]    #gridded depths
-precision=1             #Rounding to apply for delta calculation
+precision=5             #Rounding to apply for delta calculation
